# dimos-unitree-go2

./: .gitignore  AGENTS.md  CODEX_GOAL.md  README.md  SPEC.md  STATUS.md  package-lock.json  package.json  pyproject.toml
.codex/skills/deep-pr-review-loop/: SKILL.md
config/: mission_demo.yaml  policy_demo.yaml
dimos/: __init__.py
dimos/experimental/: __init__.py
dimos/robot/: __init__.py
docs/: ARENA.md  DEMO.md  DIMOS_CODEBASE_NOTES.md  FAILURE_MEMORY.md  RUNBOOK_MAC_GO2.md  RUNBOOK_UBUNTU_VM.md  SAFETY.md  SHOPPING.md  SUBAGENTS.md  TEST_LOOPS.md  TROUBLESHOOTING.md  UPSTREAM_WORKFLOW.md  dogops_qr_cargo_integration.md  macos_dimos_lcm_network.md
docs/dogops/: DEMO.md  DRY_RUNS.md  GEMINI_IMAGE_COMPARISON_IMPLEMENTATION_PLAN.md  HACKATHON_EXECUTION.md  HARDWARE_HANDOFF.md  ISSUE_19_EDITABLE_MAP_IMPLEMENTATION_PLAN.md  ISSUE_19_LIVE_ROUTE_FOLLOWING_IMPLEMENTATION_PLAN.md  ORBSTACK_WEB_SIMULATION_HANDOFF.md  README.md  REAL_GO2_PR_TEST_PLAN.md  ROUTE_RUN_HISTORY_IMPLEMENTATION_PLAN.md  SITEOPS_SKILLS_VALIDATION.md  TAGS.md  UPSTREAM_OPPORTUNITIES.md
examples/dogops/: manifest_demo.yaml  qr_cargo_event_sample.json  site_demo.yaml
prompts/: codex_upstream_triage_goal.txt  subagent_core.md  subagent_dashboard.md  subagent_dimos.md  subagent_hardware.md  subagent_naveval.md  subagent_perception.md
scripts/: bootstrap_ubuntu_vm.sh  dogops_demo_dry_run.sh  dogops_go2_preflight.sh  dogops_post_sample_qr_event.py  dogops_quick_checks.sh  macos_dimos_lcm_network.sh  sync_into_dimos.sh  test_macos_dimos_lcm_network.sh  verify_env.sh
(+54 files in other folders)
